--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -11,7 +11,7 @@ resources:
   type: s3
   source:
     bucket: {{aws-bucket}}
-    regexp: release/pal-tracker-(.*).jar
+    regexp: releases/pal-tracker-(.*).jar
     access_key_id: {{aws-access-key-id}}
     secret_access_key: {{aws-secret-access-key}}
 
@@ -26,7 +26,7 @@ resources:
 - name: review-deployment
   type: cf
   source:
-    api: {{cf-api-uri}}
+    api: {{cf-api-url}}
     username: {{cf-username}}
     password: {{cf-password}}
     organization: {{cf-org}}
@@ -35,7 +35,7 @@ resources:
 - name: production-deployment
   type: cf
   source:
-    api: {{cf-api-uri}}
+    api: {{cf-api-url}}
     username: {{cf-username}}
     password: {{cf-password}}
     organization: {{cf-org}}
@@ -53,7 +53,7 @@ jobs:
   - put: pal-tracker-artifacts
     params:
       file: build-output/pal-tracker-*.jar
-  -put: version
+  - put: version
     params:
       file: version/number
 
@@ -67,16 +67,17 @@ jobs:
     params:
       manifest: pal-tracker/manifest-review.yml
       path: pal-tracker-artifacts/pal-tracker-*.jar
-      environment_variables: "Hello from the review environment"
+      environment_variables:
+        WELCOME_MESSAGE: "Hello from the review environment"
 
 - name: deploy-production
   plan:
   - get: pal-tracker
   - get: pal-tracker-artifacts
-    trigger: true
     passed: [deploy-review]
   - put: production-deployment
     params:
       manifest: pal-tracker/manifest-production.yml
       path: pal-tracker-artifacts/pal-tracker-*.jar
-      environment_variables: "Hello from the production environment"
+      environment_variables:
+        WELCOME_MESSAGE: "Hello from the production environment"
