--- a/ci/build.yml
+++ b/ci/build.yml
@@ -20,5 +20,5 @@ run:
   - |
     cd pal-tracker
     chmod +x gradlew
-    ./gradlew build
-    cp build/libs/pal-tracker.jar ../build-output
+    ./gradlew -P version=$(cat ../version/number) build
+    cp build/libs/pal-tracker-*.jar ../build-output
