--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -81,6 +81,6 @@ jobs:
       manifest: pal-tracker/manifest-production.yml
       path: pal-tracker-artifacts/pal-tracker-*.jar
       environment_variables:
-        WELCOME_MESSAGE: "Hello from the production environment"
+        WELCOME_MESSAGE: "Hello from the prod environment"
         SECURITY_FORCE_HTTPS: true
 
